--- a/galeria.html
+++ b/galeria.html
@@ -9,7 +9,7 @@
 <body>
 
 <header class="site-header">
-<img src="/mnt/data/logo.png" class="logo" alt="Logo">
+<img src="logo.png" class="logo" alt="Logo">
 <h1>Galeria</h1>
 </header>
 
@@ -22,16 +22,17 @@
 
 <main class="container gallery-grid">
 <div class="info-box">
-<h2>Fotos da oficina e serviços</h2>
-<p>Alguns exemplos do nosso trabalho.</p>
-<p><strong>Endereço:</strong> Rua da Gasolina, 304 — Petrolândia, Contagem – MG</p>
+<h2>Fotos da Oficina</h2>
+<p>Serviços reais realizados pela WF Mecânica Automotiva.</p>
 </div>
 
 <div class="grid">
-<img src="https://images.unsplash.com/photo-1581091014530-8c4b9a9e3f18?auto=format&fit=crop&w=900&q=80" alt="">
-<img src="https://images.unsplash.com/photo-1533473359331-0135ef1b58bf?auto=format&fit=crop&w=900&q=80" alt="">
-<img src="https://images.unsplash.com/photo-1542362567-b07e54358753?auto=format&fit=crop&w=900&q=80" alt="">
-<img src="https://images.unsplash.com/photo-1518458028785-8fbcd101ebb9?auto=format&fit=crop&w=900&q=80" alt="">
+
+<img src="galeria1.jpeg" alt="Foto mecânica 1">
+<img src="galeria2.jpeg" alt="Foto mecânica 2">
+<img src="galeria3.jpeg" alt="Foto mecânica 3">
+<img src="galeria4.jpeg" alt="Foto mecânica 4">
+
 </div>
 </main>
 
@@ -39,5 +40,6 @@
 <p>Rua da Gasolina, 304 — Petrolândia, Contagem – MG</p>
 <p>© 2025 WF Mecânica Automotiva</p>
 </footer>
+
 </body>
 </html>
