--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>WF Mecânica Automotiva</title>
 <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="home-bg">
 
 <header class="site-header">
 <img src="/mnt/data/logo.png" alt="Logo WF Mecânica" class="logo">
