--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 <title>WF Mecânica Automotiva</title>
 <link rel="stylesheet" href="style.css">
 </head>
-<body class="home-bg">
+
+<body>
 
 <header class="site-header">
-<img src="/mnt/data/logo.png" alt="Logo WF Mecânica" class="logo">
+<img src="logo.png" alt="Logo WF Mecânica" class="logo">
 <h1>WF Mecânica Automotiva</h1>
 </header>
 
@@ -19,15 +20,14 @@
 <a href="sobre.html">Sobre Nós</a>
 <a href="localizacao.html">Localização</a>
 <a href="contato.html">Contato</a>
-<a href="galeria.html">Galeria</a>
 <a href="agendamento.html">Agendamento</a>
 <a href="blog.html">Blog</a>
 <a href="depoimentos.html">Depoimentos</a>
-<a href="portfolio.html">Portfólio</a>
 <a href="promocoes.html">Promoções</a>
 </nav>
 
 <main class="container">
+
 <section class="hero">
 <h2>Sua oficina de confiança em Petrolândia, Contagem</h2>
 <p>Revisão completa, elétrica, eletrônica, diagnóstico avançado e muito mais.</p>
@@ -37,19 +37,14 @@
 <section class="info-box">
 <p><strong>WhatsApp:</strong> <a href="https://wa.me/5531993957145" target="_blank">(31) 99395-7145</a></p>
 <p><strong>CNPJ:</strong> 49728613000139</p>
-<p><strong>Instagram:</strong> <a href="https://instagram.com/wf_autocenter" target="_blank">@wf_autocenter</a></p>
+<p><strong>Instagram:</strong> @wf_autocenter</p>
 <p><strong>Endereço:</strong> Rua da Gasolina, 304 — Petrolândia, Contagem – MG</p>
 </section>
 
-<section>
-<img class="mechanic-photo"
-src="https://images.unsplash.com/photo-1581091870627-3c1c1a1e491d?auto=format&fit=crop&w=1200&q=80" alt="Mecânico trabalhando">
-</section>
 </main>
 
 <footer class="site-footer">
 <p>Rua da Gasolina, 304 — Petrolândia, Contagem – MG</p>
-<p>© 2025 WF Mecânica Automotiva — Todos os direitos reservados</p>
 </footer>
 
 </body>
