--- a/servicos.html
+++ b/servicos.html
@@ -9,7 +9,7 @@
 <body>
 
 <header class="site-header">
-<img src="/mnt/data/logo.png" class="logo" alt="Logo">
+<img src="logo.png" class="logo">
 <h1>Serviços</h1>
 </header>
 
@@ -19,28 +19,32 @@
 <a href="sobre.html">Sobre Nós</a>
 <a href="localizacao.html">Localização</a>
 <a href="contato.html">Contato</a>
+<a href="agendamento.html">Agendamento</a>
+<a href="blog.html">Blog</a>
+<a href="depoimentos.html">Depoimentos</a>
+<a href="promocoes.html">Promoções</a>
 </nav>
 
 <main class="container">
+
 <div class="info-box">
 <h2>Nossos principais serviços</h2>
 <ul class="servicos-list">
-<li>Revisão completa — checklist detalhado</li>
+<li>Revisão completa</li>
 <li>Troca de óleo e filtros</li>
-<li>Injeção eletrônica — limpeza e regulagem</li>
-<li>Freios e suspensão — pastilhas, discos e amortecedores</li>
-<li>Diagnóstico computadorizado (scanner)</li>
-<li>Correia dentada — substituição e alinhamento</li>
-<li>Arrefecimento e ar-condicionado — manutenção e recarga</li>
+<li>Injeção eletrônica</li>
+<li>Freios e suspensão</li>
+<li>Diagnóstico computadorizado</li>
+<li>Correia dentada</li>
+<li>Arrefecimento e ar-condicionado</li>
 </ul>
-<p class="small">Solicite orçamento: <a href="https://wa.me/5531993957145" target="_blank">(31) 99395-7145</a></p>
-<p><strong>Endereço:</strong> Rua da Gasolina, 304 — Petrolândia, Contagem – MG</p>
 </div>
+
 </main>
 
 <footer class="site-footer">
 <p>Rua da Gasolina, 304 — Petrolândia, Contagem – MG</p>
-<p>© 2025 WF Mecânica Automotiva</p>
 </footer>
+
 </body>
 </html>
