--- a/sobre.html
+++ b/sobre.html
@@ -9,7 +9,7 @@
 <body>
 
 <header class="site-header">
-<img src="/mnt/data/logo.png" class="logo" alt="Logo">
+<img src="logo.png" class="logo">
 <h1>Sobre Nós</h1>
 </header>
 
@@ -19,26 +19,30 @@
 <a href="sobre.html">Sobre Nós</a>
 <a href="localizacao.html">Localização</a>
 <a href="contato.html">Contato</a>
+<a href="agendamento.html">Agendamento</a>
+<a href="blog.html">Blog</a>
+<a href="depoimentos.html">Depoimentos</a>
+<a href="promocoes.html">Promoções</a>
 </nav>
 
 <main class="container">
-<div class="info-box">
-<h2>Nossa história</h2>
-<p>A WF Mecânica Automotiva é especializada em manutenção preventiva e corretiva, com foco total em qualidade, transparência e confiança.</p>
 
-<h3>Missão</h3>
+<div class="info-box">
+<h2>Nossa História</h2>
+<p>A WF Mecânica Automotiva é especializada em manutenção preventiva e corretiva.</p>
+
+<h2>Missão</h2>
 <p>Garantir o melhor desempenho e segurança do seu veículo.</p>
 
-<h3>Equipe</h3>
+<h2>Equipe</h2>
 <p>Profissionais qualificados em diagnóstico eletrônico, elétrica e mecânica geral.</p>
-
-<p><strong>Endereço:</strong> Rua da Gasolina, 304 — Petrolândia, Contagem – MG</p>
 </div>
+
 </main>
 
 <footer class="site-footer">
 <p>Rua da Gasolina, 304 — Petrolândia, Contagem – MG</p>
-<p>© 2025 WF Mecânica Automotiva</p>
 </footer>
+
 </body>
 </html>
