--- a/agendamento.html
+++ b/agendamento.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Agendamento - WF Mecânica</title>
 <link rel="stylesheet" href="style.css">
+
 <script>
 function enviarWhatsApp(event) {
 event.preventDefault();
@@ -15,67 +16,72 @@ let servico = document.getElementById("servico").value;
 let data = document.getElementById("data").value;
 let hora = document.getElementById("hora").value;
 
-let msg = `Olá, quero agendar um serviço na WF Mecânica:%0A%0A` +
+let texto = `Olá, gostaria de agendar:%0A%0A` +
 `👤 Nome: ${nome}%0A` +
 `📞 Telefone: ${telefone}%0A` +
 `🔧 Serviço: ${servico}%0A` +
 `📅 Data: ${data}%0A` +
-`⏰ Horário: ${hora}%0A`;
+`⏰ Horário: ${hora}`;
 
-let url = `https://wa.me/5531993957145?text=${msg}`;
-
-window.open(url, "_blank");
+window.open(`https://wa.me/5531993957145?text=${texto}`, "_blank");
 }
 </script>
 </head>
+
 <body>
 
 <header class="site-header">
-<img src="logo.png" class="logo" alt="Logo">
+<img src="logo.png" class="logo">
 <h1>Agendamento</h1>
 </header>
 
 <nav class="menu">
 <a href="index.html">Início</a>
 <a href="servicos.html">Serviços</a>
-<a href="agendamento.html">Agendamento</a>
+<a href="sobre.html">Sobre Nós</a>
+<a href="localizacao.html">Localização</a>
 <a href="contato.html">Contato</a>
+<a href="agendamento.html">Agendamento</a>
+<a href="blog.html">Blog</a>
+<a href="depoimentos.html">Depoimentos</a>
+<a href="promocoes.html">Promoções</a>
 </nav>
 
 <main class="container">
+
 <div class="info-box">
-<h2>Agende um serviço</h2>
-<p>O atendimento será confirmado via WhatsApp.</p>
+<h2>Agendar Serviço</h2>
+<p>Preencha e enviaremos direto para o WhatsApp.</p>
 </div>
 
 <form class="form-box" onsubmit="enviarWhatsApp(event)">
-<label>Nome Completo</label>
+<label>Nome</label>
 <input id="nome" type="text" required>
 
-<label>Telefone / WhatsApp</label>
+<label>Telefone</label>
 <input id="telefone" type="tel" required>
 
-<label>Serviço Desejado</label>
+<label>Serviço</label>
 <select id="servico" required>
 <option>Revisão Completa</option>
 <option>Troca de Óleo</option>
-<option>Diagnóstico</option>
 <option>Freios e Suspensão</option>
+<option>Diagnóstico</option>
 </select>
 
 <label>Data</label>
 <input id="data" type="date" required>
 
-<label>Horário (opcional)</label>
+<label>Horário</label>
 <input id="hora" type="time">
 
 <button class="btn" type="submit">Enviar pelo WhatsApp</button>
 </form>
+
 </main>
 
 <footer class="site-footer">
 <p>Rua da Gasolina, 304 — Petrolândia, Contagem – MG</p>
-<p>© 2025 WF Mecânica Automotiva</p>
 </footer>
 
 </body>
