--- a/depoimentos.html
+++ b/depoimentos.html
@@ -9,35 +9,49 @@
 <body>
 
 <header class="site-header">
-<img src="/mnt/data/logo.png" class="logo" alt="Logo">
+<img src="logo.png" class="logo">
 <h1>Depoimentos</h1>
 </header>
 
 <nav class="menu">
 <a href="index.html">Início</a>
-<a href="depoimentos.html">Depoimentos</a>
+<a href="servicos.html">Serviços</a>
+<a href="sobre.html">Sobre Nós</a>
+<a href="localizacao.html">Localização</a>
 <a href="contato.html">Contato</a>
+<a href="agendamento.html">Agendamento</a>
+<a href="blog.html">Blog</a>
+<a href="depoimentos.html">Depoimentos</a>
+<a href="promocoes.html">Promoções</a>
 </nav>
 
 <main class="container">
+
 <div class="info-box">
 <h2>O que nossos clientes dizem</h2>
+
 <blockquote class="testimonial">
-"Serviço excelente e muito rápido!"
+"Atendimento excelente e serviço muito rápido!"
 <cite> — Carlos M.</cite>
 </blockquote>
+
 <blockquote class="testimonial">
-"Profissionais de confiança. Recomendo!"
+"Profissionais de confiança. Recomendo demais!"
 <cite> — Ana P.</cite>
 </blockquote>
 
-<p><strong>Endereço:</strong> Rua da Gasolina, 304 — Petrolândia, Contagem – MG</p>
+<blockquote class="testimonial">
+"Melhor oficina da região!"
+<cite> — Ricardo S.</cite>
+</blockquote>
+
 </div>
+
 </main>
 
 <footer class="site-footer">
 <p>Rua da Gasolina, 304 — Petrolândia, Contagem – MG</p>
-<p>© 2025 WF Mecânica Automotiva</p>
 </footer>
+
 </body>
 </html>
