--- a/index.html
+++ b/index.html
@@ -29,14 +29,9 @@
 <main class="container">
 
 <section class="hero">
-<h2>Sua oficina de confiança no bairro Petrolândia, Contagem</h2>
+<h2>Sua oficina de confiança em Petrolândia, Contagem</h2>
 <p>Revisão completa, elétrica, eletrônica, diagnóstico avançado e muito mais.</p>
-
-<!-- Botões de ação -->
-<div class="button-group">
-<a class="btn" href="https://wa.me/5531993957145" target="_blank">WhatsApp</a>
-<a class="btn instagram" href="https://instagram.com/wf_autocenter" target="_blank">Instagram</a>
-</div>
+<a class="btn" href="contato.html">Fale conosco</a>
 </section>
 
 <section class="info-box">
