--- a/servicos.html
+++ b/servicos.html
@@ -6,6 +6,7 @@
 <title>Serviços - WF Mecânica</title>
 <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 <header class="site-header">
@@ -28,16 +29,61 @@
 <main class="container">
 
 <div class="info-box">
-<h2>Nossos principais serviços</h2>
-<ul class="servicos-list">
-<li>Revisão completa</li>
-<li>Troca de óleo e filtros</li>
-<li>Injeção eletrônica</li>
-<li>Freios e suspensão</li>
-<li>Diagnóstico computadorizado</li>
-<li>Correia dentada</li>
-<li>Arrefecimento e ar-condicionado</li>
-</ul>
+<h2>Nossos Serviços</h2>
+<p>Serviços completos para manutenção, diagnóstico e segurança do seu veículo.</p>
+</div>
+
+<div class="servicos-detalhados">
+
+<!-- Serviço 1 -->
+<div class="servico-card">
+<img src="https://images.unsplash.com/photo-1503376780353-7e6692767b70?w=900" alt="Revisão completa">
+<h3>Revisão Completa</h3>
+<p>Inspeção geral do veículo, garantindo segurança e bom funcionamento.</p>
+</div>
+
+<!-- Serviço 2 -->
+<div class="servico-card">
+<img src="https://images.unsplash.com/photo-1584714268709-c3dd9c92b37f?w=900" alt="Troca de óleo">
+<h3>Troca de Óleo e Filtros</h3>
+<p>Substituição de óleo, filtro de ar, cabine e combustível.</p>
+</div>
+
+<!-- Serviço 3 -->
+<div class="servico-card">
+<img src="https://images.unsplash.com/photo-1621961458348-06c295eb0f47?w=900" alt="Injeção eletrônica">
+<h3>Injeção Eletrônica</h3>
+<p>Diagnóstico e correção de falhas no sistema de injeção.</p>
+</div>
+
+<!-- Serviço 4 -->
+<div class="servico-card">
+<img src="https://images.unsplash.com/photo-1592859601745-75f1d93fa4c0?w=900" alt="Freios e suspensão">
+<h3>Freios e Suspensão</h3>
+<p>Troca de pastilhas, discos, amortecedores e manutenção geral.</p>
+</div>
+
+<!-- Serviço 5 -->
+<div class="servico-card">
+<img src="https://images.unsplash.com/photo-1585790050230-5dd28404ccb1?w=900" alt="Diagnóstico computadorizado">
+<h3>Diagnóstico Computadorizado</h3>
+<p>Leitura completa via scanner profissional.</p>
+</div>
+
+<!-- Serviço 6 -->
+<div class="servico-card">
+<img src="https://images.unsplash.com/photo-1599140781073-0c9c7e01937f?w=900" alt="Correia dentada">
+<h3>Correia Dentada</h3>
+<p>Substituição preventiva e correção de sincronismo.</p>
+</div>
+
+<!-- Serviço 7 -->
+<div class="servico-card">
+<img src="https://images.unsplash.com/photo-1632823463741-bbf45fbacfea?w=900" alt="Arrefecimento e ar-condicionado">
+<h3>Arrefecimento e Ar-Condicionado</h3>
+<p>Limpeza, troca de fluido, manutenção e carga do ar-condicionado.</p>
+</div>
+
 </div>
 
 </main>
