--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 <body>
 
 <header class="site-header">
-<img src="logo.png" alt="Logo WF Mecânica" class="logo">
-<h1>WF Mecânica Automotiva</h1>
+
+<div class="hero-logo-box">
+<h2 class="slogan">Mecânica Automotiva</h2>
+<img src="logo.png" alt="Logo WF Mecânica" class="logo-grande">
+</div>
+
 </header>
 
 <nav class="menu">
